solve overflowing content on page wit PGPkey

--- a/media/css/security/security.scss
+++ b/media/css/security/security.scss
@@ -11,3 +11,13 @@ $image-path: '/media/protocol/img';
         'components/level',
         'components/links',
         'components/note';
+
+.pgp-key {
+    overflow-x: scroll;
+}
+
+// mozilla/protocol#422
+.mzp-c-article {
+    width: $content-md;
+    max-width: 100%;
+}
